--- a/pixi-project/package.json
+++ b/pixi-project/package.json
@@ -10,6 +10,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^25.0.0",
     "pixi.js": "^8.8.1"
   },
   "devDependencies": {
